new game engine layout

--- a/game.html
+++ b/game.html
@@ -1,2 +1,2 @@
-<applet codebase="bin" code="ZombieGame" width=800 height=600>
+<applet codebase="bin" code="Zombies" width=800 height=600>
 </applet>
